--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "choco": "^0.2.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "mongodb": "^5.4.0",
+    "mongoose": "^7.1.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
+    "pug": "^3.0.2",
+    "socket.io": "^4.6.1"
   }
 }
